--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "mapbox-gl": "^3.2.0",
     "puppeteer": "^22.5.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
