--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
 
     - name: Build the project
-      run: npm run build 
+      run: npm start
 
     - name: Run tests
       run: npm test 
