--- a/LOGIN-SIGNUP/login-signup/package.json
+++ b/LOGIN-SIGNUP/login-signup/package.json
@@ -18,7 +18,6 @@
     "coverage": "npm test --coverage",
     "start:ci": "serve -s build",
     "ci:e2e": "start-server-and-test start:ci http://localhost:5000 npx playwright test"
-
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@playwright/test": "^1.42.1",
     "@testing-library/react": "^14.2.2",
     "@types/node": "^20.11.30",
