--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,10 @@ jobs:
       run: npm install
       working-directory: LOGIN-SIGNUP/login-signup
 
+    - name: Install Playwright browsers
+      run: npx playwright install
+      working-directory: LOGIN-SIGNUP/login-signup
+
     - name: Build the app
       run: npm run build
       working-directory: LOGIN-SIGNUP/login-signup
