--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,17 @@
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
+      - name: Install dependencies
+        run: npm install
+        working-directory: LOGIN-SIGNUP/login-signup
+  
+      - name: Install Playwright browsers
+        run: npx playwright install
+        working-directory: LOGIN-SIGNUP/login-signup
+  
+      - name: Build the app
+        run: npm run build
+        working-directory: LOGIN-SIGNUP/login-signup
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
