--- a/.github/workflows/code_review_metrics.yml
+++ b/.github/workflows/code_review_metrics.yml
@@ -22,35 +22,17 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install PyGithub pandas matplotlib
+          pip install PyGithub matplotlib numpy pandas
       
-      # Fetch and calculate the number of commits per pull request
-      - name: Calculate Number of Commits per PR
+      # Generate and visualize metrics
+      - name: Generate Metrics Report
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts/calculate_commits_per_pr.py
+        run: python scripts/generate_metrics_report.py
       
-      # Calculate the average time for PR reviews
-      - name: Calculate Average Time for PR Review
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts/calculate_average_review_time.py
-      
-      # Calculate the number of comments on each PR
-      - name: Calculate Number of Comments per PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts/calculate_comments_per_pr.py
-      
-      # Track the number of PRs each contributor has reviewed
-      - name: Track PR Reviews per Contributor
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts/track_pr_reviews_per_contributor.py
-      
-      # Upload metrics report or visualization
+      # Upload the compiled metrics report
       - uses: actions/upload-artifact@v4
         with:
           name: metrics-report
-          path: metrics-report/
-          retention-days: 7
+          path: code_review_metrics.pdf
+          retention-days: 30
