--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,14 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-    "ghcr.io/devcontainers/features/terraform:1": {}
-  }
+	"image": "mcr.microsoft.com/devcontainers/universal:2",
+	"features": {
+		"ghcr.io/devcontainers/features/aws-cli:1": {},
+		"ghcr.io/devcontainers-contrib/features/act-asdf:2": {},
+		"ghcr.io/devcontainers-contrib/features/terraform-asdf:2": {}
+	},
+
+	"customizations": {
+		"vscode": {
+			"extensions": ["github.vscode-github-actions"]
+		}
+	}
 }
