--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,7 +49,22 @@ jobs:
       
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
-        
+      
+      - name: Check AWS Credentials
+        run: | 
+          if [ -z "${{ secrets.TERRAFORM_AWS_ACCESS_KEY_ID }}" ] || [ -z "${{ secrets.TERRAFORM_AWS_SECRET_ACCESS_KEY }}" ]; then
+            echo "AWS credentials are not set"
+            exit 1
+          else
+            echo "AWS credentials are set"
+          fi
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TERRAFORM_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.TERRAFORM_AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2 
+
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
