renamed on workflor run

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy Application
 
 on:
   push:
-    workflows: ['Terraform Deployment']
+    workflows: [Terraform Deployment]
     types: [completed]
     branches: [assignment10]
 
