--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,14 +4,11 @@ name: Deploy Application
 
 on:
   push:
-    workflows: [Playwritght Tests]
-    types: [completed]
     branches: [assignment10]
 
 jobs:
-  on-success:
+  deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion }} 
     steps:
     - uses: actions/checkout@v2
 
