--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
         node-version: '20'  
 
     - name: Install Dependencies
-      run: npm install
+      run: cd client && npm install
 
     - name: Build Application
-      run: npm run build 
+      run: cd client npm run build 
 
     - name: Archive Application
       run: zip -r bustrack-${{ github.run_id }}.zip ./dist  
