--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       run: cd client && npm install
 
     - name: Build Application
-      run: cd client npm run build 
+      run: cd client && npm run build 
 
     - name: Archive Application
       run: zip -r bustrack-${{ github.run_id }}.zip ./dist  
