--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       run: cd client && npm run build 
 
     - name: Archive Application
-      run: zip -r bustrack-${{ github.run_id }}.zip ./dist  
+      run: cd client && zip -r bustrack-${{ github.run_id }}.zip ./dist  
 
     - name: Upload ZIP to Artifact Storage
       uses: actions/upload-artifact@v2
