--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "node-fetch": "^3.3.2"
-  }
+    "node-fetch": "^2.7.0",
+    "react": "^18.3.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "type": "module"
 }
