--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "react": "^18.3.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && node server.js",
+    "client": "cd client && npm run dev"
   }
+  
 }
