created MapBox component and mapPage

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.42.0",
+    "cors": "^2.8.5",
     "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
